# Decentralized-Global-Education-Skills-Passport

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_GUIDE.md  TASKS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
contracts/round/: Cargo.toml  ERRORS.md  README.md
contracts/round/src/: drand.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/round/test_snapshots/test/: active_round_seal_ttl_covers_reveal_window.1.json  clear_and_settle_work_after_seal_expiry.1.json  commit_locks_escrow.1.json  commit_on_settled_round_rejected.1.json  commit_overwrite_before_close_refunds_prior_escrow.1.json  contract_balance_zero_after_settle.1.json  contract_balance_zero_after_void.1.json  double_settle_rejected.1.json  double_void_rejected.1.json  duplicate_reveal_rejected.1.json  full_lifecycle_real_drand_signature.1.json  get_bidders_page_cursor_at_total.1.json  get_bidders_page_multi.1.json  get_bidders_page_partial.1.json  get_bidders_page_preserves_order.1.json  get_bidders_returns_ordered_index.1.json  highest_bid_table_driven.1.json  highest_bid_table_driven.2.json  highest_bid_table_driven.3.json  highest_bid_table_driven.4.json  highest_bid_tie_is_deterministic_first_inserter_wins.1.json  highest_bid_tie_is_deterministic_first_inserter_wins.2.json  late_reveal_rejected_after_window_even_with_seal_present.1.json  lowest_bid_table_driven.1.json  lowest_bid_table_driven.2.json  lowest_bid_table_driven.3.json  lowest_bid_tie_is_deterministic_first_inserter_wins.1.json  (+19 more)
docs/: DEPLOY.md  (+13 more)
(+254 files in other folders)
